--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"axios": "^0.18.0",
 		"exit": "^0.1.2",
 		"moment": "^2.22.2",
+		"npm": "^6.8.0",
 		"register-service-worker": "^1.0.0",
 		"vue": "^2.5.16",
 		"vue-router": "^3.0.1",
