--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint"
+		"lint": "vue-cli-service lint",
+		"deploy": "npm run build && cd dist && git checkout gh-pages && git add -A && git commit -m 'deploy' && git push -f git@github.com:Kappalucky/WeatherApp.git gh-pages"
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^1.2.2",
